--- a/views/input1.ejs
+++ b/views/input1.ejs
@@ -20,8 +20,9 @@
         <form action="/input1" name="inputform" method="POST" class="inner-outer-container py-4 needs-validation"
             onSubmit="return validate()" novalidate>
           <div class="text-center">
+            <!-- CLIENT INFO (SECTION 1 OF 4) -->
             <div class="card-body p-5 text-center" style="background-color: #00bdb0;">
-            <!-- Row 1 of the form  -->
+            <!-- Row 1 -->
             <div class="row">
               <div class="col-lg-12 py-2">
                 <h4 class="input-section" id="client-info">Client Info</h4>
@@ -60,7 +61,7 @@
                 </div>
               </div>
             </div>
-            <!-- Row 2 of the form -->
+            <!-- Row 2  -->
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -99,7 +100,7 @@
                 </div>
               </div>
             </div>
-            <!-- Row 3 of the form -->
+            <!-- Row 3 -->
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -162,6 +163,7 @@
                 </div>
               </div>
             </div> 
+            <!-- Row 4 -->
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -194,6 +196,7 @@
                 </div>
               </div>
             </div>
+            <!-- Row 5 -->
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -235,7 +238,7 @@
                 </div>
               </div>
             </div>
-            <!-- Row 3 of the form -->
+            <!-- Row 6 -->
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -276,6 +279,7 @@
               </div>
             </div>
           </div>
+
             <!-- SALE SETUP (SECTION 2 OF 4) -->
             <div class="card-body p-5 text-center" style="background-color: #285880;">
             <div class="row">
@@ -318,7 +322,7 @@
                 </div>
               </div>
             </div>
-            <!-- Row 5 of the form -->
+            
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
@@ -389,10 +393,6 @@
                 <div class="col-lg-12 py-1">
                   <h4 class="input-section" id="sale-setup">Sale Results</h4>
                   <div class="row g-2">
-  
-                    <!-- Row 1 of SALE RESULTS -->
-
-                    
                     <div class="col-lg-3">
                       <div class="form-floating">
                         <input type="text" class="form-control" id="floatingInputGrid" name="transactionsopeningday"
@@ -479,8 +479,7 @@
                         </div>
                       </div>
                     </div>
-                    
-                    
+                                       
                   </div>
                 </div>
               </div>
@@ -488,8 +487,6 @@
             <div class="row">
               <div class="col-lg-12 py-1">
                 <div class="row g-2">
-                  
-                  <!-- Row 3 of SALE RESULTS -->
                   <div class="col-lg-3">
                     <div class="form-floating">
                       <input type="number" class="form-control" id="floatingInputGrid" maxlength="2"
@@ -510,9 +507,9 @@
                         Please enter a value
                       </div>
                     </div>
-                  </div>
-                  
+                  </div>               
                 </div>
+
               </div>
             </div>
           </div>
@@ -523,8 +520,6 @@
               <div class="col-lg-12 py-1">
                 <h4 class="input-section" id="sale-setup">Post Sale</h4>
                 <div class="row g-2">
-
-                  <!-- Row 1 of POST SALE -->
                   <div class="col-lg-3 col-md-6">
                     <div class="form-floating">
                       <input type="number" class="form-control" id="floatingInputGrid" name="disposalfee"
@@ -572,13 +567,11 @@
                         value="" >
                       <label for="floatingInputGrid">Courtesy Discount</label>
                     </div>
-                  </div>
-                  
+                  </div>              
                 </div>
-              </div>
-               
-            </div>
-            
+
+              </div>          
+            </div>        
           </div>
     
           <button class="btn btn-primary btn-lg btn-block" type="submit">Save</button> 
@@ -587,8 +580,5 @@
         </form>
     </div>
   </div>
-
-
-
 
   <%- include ('partials/footer') -%>
