--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -80,8 +80,8 @@
 
     <script type="text/javascript">
       function validate() {
-        var hoursstagingbudget = document.forms["inputform"]["hoursstagingbudget"].value;
-        if (isNAN(hoursstagingbudget)) {
+        var hoursStagingBudget = document.forms["inputform"]["hoursStagingBudget"].value;
+        if (isNaN(hoursStagingBudget)) {
           alert("Please enter a numeric value only!")
         }
       }
