Update sales form input names.

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -80,7 +80,7 @@
 
 <!-- <script type="text/javascript">
   function validate() {
-    var grossSalesCash = document.forms["inputform"]["grossSalesCash"].value;
+    var grossSalesCash = document.forms["inputForm"]["grossSalesCash"].value;
 
     if(isNaN(grossSalesCash)){
       event.preventDefault();
