--- a/src/views/salesdetail.ejs
+++ b/src/views/salesdetail.ejs
@@ -16,11 +16,9 @@
           style="background-color: #bfc8da; padding: 3em 1em;">
           <h1 class="display-6">Edit Sale</h1>
 
-
-
           <div class="container mb-3 mt-3">
             <form action="/sales/<%= saleresult._id %>" method="POST"
-              name="inputform"
+              name="inputForm"
               class="inner-outer-container py-4 needs-validation"
               onSubmit="return validate()" novalidate>
 
