--- a/src/views/partials/footer_original.ejs
+++ b/src/views/partials/footer_original.ejs
@@ -1,54 +1,61 @@
 <!--<p>This is the footer!</p>-->
-<footer id="sticky-footer" class="text-center text-white" style="background-color: #0a4275;">
-    <!-- Grid container -->
-    
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © <span id="year"></span> Copyright True Legacy Homes   |    
-      <a class="text-white" href="https://www.trusponse.com/" style="text-decoration: none;" target="_blank">  Built by TruSponse, LLC</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
+<footer id="sticky-footer" class="text-center text-white"
+  style="background-color: #0a4275;">
+  <!-- Grid container -->
 
-
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © <span id="year"></span> Copyright True Legacy Homes |
+    <a class="text-white" href="https://www.trusponse.com/"
+      style="text-decoration: none;" target="_blank"> Built by TruSponse,
+      LLC</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 
 <!-- Bootstrap Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+  crossorigin="anonymous"></script>
+<script
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script
+  src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
+<script
+  src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script>
 <script src="js/bootstrap-datepicker.min.js"></script>
 <script src="js/bootstrap-datepicker-en-CA.min"></script>
 
 <script type="text/javascript">
-// Example starter JavaScript for disabling form submissions if there are invalid fields
-// DO NOT REMOVE - TBrannon (08/28/2021) -----------------------------------------------
-(function () {
-  'use strict'
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+  // DO NOT REMOVE - TBrannon (08/28/2021) -----------------------------------------------
+  (function () {
+    'use strict'
 
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  var forms = document.querySelectorAll('.needs-validation')
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.querySelectorAll('.needs-validation')
 
-  // Loop over them and prevent submission
-  Array.prototype.slice.call(forms)
-    .forEach(function (form) {
-      form.addEventListener('submit', function (event) {
-        if (!form.checkValidity()) {
-          event.preventDefault()
-          event.stopPropagation()
-        }
+    // Loop over them and prevent submission
+    Array.prototype.slice.call(forms)
+      .forEach(function (form) {
+        form.addEventListener('submit', function (event) {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          }
 
-        form.classList.add('was-validated')
-      }, false)
-    })
-})()
+          form.classList.add('was-validated')
+        }, false)
+      })
+  })()
 </script>
 
 <script>
 
-  
-  $(document).ready(function() {
-    $(document).on('change', '.form-control-saleDate', function() {
+
+  $(document).ready(function () {
+    $(document).on('change', '.form-control-saleDate', function () {
       var saleDate;
       saleDate = $(' #saleDate ').val();
       var targetDate = new Date();
@@ -62,19 +69,15 @@
   });
 </script>
 
-
 <script>
   $('.mydatatable').DataTable({
-      lengthMenu:[[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]]
-
+    lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]]
   });
 </script>
 
-
-
 <!-- <script type="text/javascript">
   function validate() {
-    var grossSalesCash = document.forms["inputform"]["grossSalesCash"].value;
+    var grossSalesCash = document.forms["inputForm"]["grossSalesCash"].value;
 
     if(isNaN(grossSalesCash)){
       event.preventDefault();
@@ -88,22 +91,20 @@
   }
 </scrip> -->
 
-
 <script>
   function setTwoNumberDecimal(el) {
-    
+
     el.value = parseFloat(el.value).toFixed(2);
-    
+
   };
 </script>
 
-
 <script>
-    $('.dropdown-toggle').dropdown()
+  $('.dropdown-toggle').dropdown()
 </script>
 <script>
-    var date = new Date().getFullYear();
-    document.getElementById("year").innerHTML = date;
+  var date = new Date().getFullYear();
+  document.getElementById("year").innerHTML = date;
 </script>
 <!-- <script>
     $(document).ready(function() {
@@ -118,7 +119,6 @@
     })
 </script>
 
-
 <script>
     $('#datetimepicker').datetimepicker({
         timepicker: false,
@@ -127,15 +127,13 @@
         autoClose: true
     });
 </script> -->
-
-
 </body>
 
 <script type="text/javascript">
 
-$(document).ready(function(){
-	$('.table').footable();
-});
+  $(document).ready(function () {
+    $('.table').footable();
+  });
 
 </script>
 
