Add sale form individual step saving.

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -104,9 +104,9 @@
 </script>
 
 
-<script>
+<!--script>
     $('.dropdown-toggle').dropdown()
-</script>
+</script-->
 <script>
     var date = new Date().getFullYear();
     document.getElementById("year").innerHTML = date;
@@ -137,12 +137,10 @@
 
 </body>
 
-<script type="text/javascript">
-
+<!--script type="text/javascript">
 $(document).ready(function(){
 	$('.table').footable();
 });
-
-</script>
+</script-->
 
 </html>
