--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,7 +38,7 @@
   <script type="text/javascript"
     src="..js/bootstrap-table-expandable.js"></script>
 
-  <script>
+  <!--script>
     $(function () {
       var bindDatePicker = function () {
         $(".date").datetimepicker({
@@ -77,7 +77,7 @@
       }
       bindDatePicker();
     });
-  </script>
+  </script-->
 
   <script type="text/javascript">
     $(document).on('click', 'header nav ul li', function () {
