--- a/src/views/sales.ejs
+++ b/src/views/sales.ejs
@@ -1,56 +1,52 @@
 <%- include ('partials/header', {username: authUser.name}) -%>
 
-  <div class="container logo-container py-5 d-flex justify-content-center">
-    <img src="../img/TLH logo.png" class="logo-image" alt="True Legacy Homes"
-      width="500" height="175">
-  </div>
+<div class="container logo-container py-5 d-flex justify-content-center">
+  <img src="../img/TLH logo.png"
+       class="logo-image"
+       alt="True Legacy Homes"
+       width="500"
+       height="175">
+</div>
 
-  <div class="container container-header">
-    <!-- <header class="jumbotron"> -->
-    <div class="container py-5">
-      <!-- <h1 class="display-4">True Legacy Homes Sale Manager</h1> -->
-      <div class="text-center">
-        <h1 class="display-6 mb-2">Existing Sales</h1>
-      </div>
-
-      <!-- View Sales -->
-      <table
-        class="table table-striped table-bordered table-expandable mydatatable"
-        style="width: 100%;">
-        <thead>
-          <tr>
-            <th scope="col">Job Name</th>
-            <th scope="col">Market</th>
-            <th scope="col">Sale Date</th>
-            <!-- <th scope="col">Client Name</th>
-                      <th scope="col">Salesperson</th> -->
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% saleresults.forEach(function(saleresult) { %>
-            <tr>
-              <td>
-                <%= saleresult.jobName %>
-              </td>
-              <td>
-                <%= saleresult.market %>
-              </td>
-              <td>
-                <%= saleresult.saleDate %>
-              </td>
-              <!-- <td><%= saleresult.client_Name %></td>
-                            <td><%= saleresult.salesPerson %></td> -->
-              <td>
-                <a href="/sales/<%= saleresult._id %>">More</a>
-                <!-- <a href="/sales/delete/<%= saleresult._id %>" class="btn btn-sm btn-danger">Delete</a> -->
-              </td>
-            </tr>
-            <% }); %>
-        </tbody>
-      </table>
-
+<div class="container container-header">
+  <!-- <header class="jumbotron"> -->
+  <div class="container py-5">
+    <!-- <h1 class="display-4">True Legacy Homes Sale Manager</h1> -->
+    <div class="text-center">
+      <h1 class="display-6 mb-2">Existing Sales</h1>
     </div>
-  </div>
 
-  <%- include ('partials/footer') -%>
+    <!-- View Sales -->
+    <table class="table table-striped table-bordered table-expandable mydatatable"
+           style="width: 100%;">
+      <thead>
+        <tr>
+          <th scope="col">Job Name</th>
+          <th scope="col">Market</th>
+          <th scope="col">Sale Date</th>
+          <!-- <th scope="col">Client Name</th>
+          <th scope="col">Salesperson</th> -->
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% saleresults.forEach(function(saleresult) { %>
+        <tr>
+          <td><%= saleresult.jobName %></td>
+          <td><%= saleresult.market %></td>
+          <td><%= saleresult.saleDate %></td>
+          <!-- <td><%= saleresult.client_Name %></td>
+          <td><%= saleresult.salesPerson %></td> -->
+          <td>
+            <a href="/sale/<%= saleresult._id %>">More</a>
+            <!-- <a href="/sales/delete/<%= saleresult._id %>" class="btn btn-sm btn-danger">Delete</a> -->
+          </td>
+        </tr>
+        <% }); %>
+      </tbody>
+    </table>
+
+  </div>
+</div>
+
+<%- include ('partials/footer') -%>
