--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,7 +18,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <!--  jQuery -->
   <script type="text/javascript" src="/js/jquery.js"></script>
   <script type="text/javascript"
